--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-DB_HOST=localhost
+DB_HOST=roundhouse.proxy.rlwy.net
 DB_ROOT=root
-DB_PASSWORD=
+DB_PASSWORD=b1hdGbghA4ChG-f6FEbdeBCFd1BFg2aa
+DB_Database = railway
+DB_PORT=25896
